Bug 85313 - Garbage around mouse pointer when resumed from suspend
Summary: Garbage around mouse pointer when resumed from suspend
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Server/DDX/Xorg (show other bugs)
Version: git
Hardware: ARM Linux (All)
: medium normal
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-10-22 06:38 UTC by Yogish Kulkarni
Modified: 2014-11-11 08:31 UTC (History)
5 users (show)

See Also:
i915 platform:
i915 features:


Attachments
fix for the issue (1.70 KB, patch)
2014-10-22 06:54 UTC, Yogish Kulkarni
no flags Details | Splinter Review

Description Yogish Kulkarni 2014-10-22 06:38:49 UTC

    
Comment 1 Yogish Kulkarni 2014-10-22 06:46:00 UTC
Garbage around mouse pointer is observed when resumed from suspend due to below sequence - 
1)Cursor is removed: isUp will be FALSE if HW cursor is set.

2)VT switched away from X: vtSema becomes FALSE.

3)xf86CursorSetCursor is called with non-null CursorPtr:
Saves the passed in CursorPtr, fallbacks to SW cursor and invokes spriteFuncs->SetCursor which saves the area under cursor and restores
the cursor. This sets isUp to TRUE and as vtSema is FALSE saved data
is garbage.

4) VT switched to X : vtSema becomes TRUE. xf86Cursor enable fb access
is called which will remove the SW cursor, i.e copies saved data in #3
to screen.

This results to momentary garbage data on screen.
Comment 2 Yogish Kulkarni 2014-10-22 06:54:01 UTC
Created attachment 108221 [details] [review]
fix for the issue

Proposed fix against xserver 1.12.4 is attached.
Comment 3 Yogish Kulkarni 2014-11-11 08:31:57 UTC
Fix is merged in Master -
http://cgit.freedesktop.org/xorg/xserver/commit/?id=df6a3a07f60c40bab2b59b9b3ba0c20c8fb7e95d

Marking as resolved.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.